--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,41 +1,18 @@
 {
   "version": 2,
-  "name": "tti-frontend",
   "buildCommand": "yarn build",
   "outputDirectory": "build",
-  "devCommand": "yarn start",
   "installCommand": "yarn install",
   "framework": "create-react-app",
   "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "https://your-backend-url.vercel.app/api/:path*"
-    }
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
   "headers": [
     {
-      "source": "/api/:path*",
+      "source": "/static/(.*)",
       "headers": [
-        {
-          "key": "Access-Control-Allow-Credentials",
-          "value": "true"
-        },
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization"
-        }
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
     }
-  ],
-  "env": {
-    "REACT_APP_BACKEND_URL": ""
-  }
+  ]
 }
